// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slot should override the prop provided by the theme creator with the one given by the user 1`] = `
<div>
  This should render instead
</div>
`;

exports[`Slot should pass any other extra prop to the Fill 1`] = `
<div>
  Data passed as prop
</div>
`;

exports[`Slot should pass the data prop to the Fill 1`] = `
<div>
  Data passed as prop
</div>
`;

exports[`Slot should read the data from state.source and pass it to the Fill 1`] = `
<div>
  This would normally be data for this route
</div>
`;

exports[`Slot should render children as a fallback 1`] = `"fallback"`;

exports[`Slot should work in the most basic case 1`] = `
<div>
  Im a Fill
</div>
`;
